syntax = "proto3";

option csharp_namespace = "MedicalService";

package greet;

// The greeting service definition.
service Greeter {
  
  // Gets cumulative total vaccine doses administered for specified country
  rpc GetVaccinesData(VaccinesDataRequest) returns (stream VaccinesDataReply);

}


// The request message containing country ISO Alpha-3 code
message VaccinesDataRequest {
  Filter filter = 1;
}

message Filter {
  string country = 1;
  string dataSource = 2;
  double totalVaccinations = 3;
  double totalVaccinationsPerHundred = 4;
}

// The response message containing vaccine information per country
message VaccinesDataReply {
  string country = 1;
  string iso3 = 2;
  string region = 3;
  string dataSource = 4;
  string dateUpdated = 5;
  double totalVaccinations = 6;
  double onePlusDose = 7;
  double totalVaccinationsPerHundred = 8;
  double onePlusDosePerHundred = 9;
  double personsLastDose = 10;
  double lastDosePerHundred = 11;
  string vaccinesUsed = 12;
  string firstVaccineDate = 13;
  double vaccinesTypesUsed = 14;
  double personsBoosterDose = 15;
  double personsBoosterDosePerHundred = 16;
}

